test/trivial/bradc/readmethod.good
Error: Symbol 'goo' is not defined (test/trivial/bradc/readmethod.chpl:2)
